solved the bug span text align center

--- a/style.less
+++ b/style.less
@@ -969,6 +969,7 @@ body {
 
                                             .input-div {
                                                 margin-top: 10px;
+                                                text-align: center;
 
                                             }
                                         }
